infra/k8s/istio_alb/virtual_services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: airflow-vs
spec:
  hosts:
  - "suzano-airflow.prd.com.br"
  gateways:
  - airflow-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: airflow-service
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trino-vs
spec:
  hosts:
  - "suzano-trino.prd.com.br"
  gateways:
  - airflow-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: trino-service
        port:
          number: 8081
